--- a/package.json
+++ b/package.json
@@ -14,7 +14,17 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.6",
     "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
+    "eslint": "^8.20.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.3.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import-helpers": "^1.2.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^28.1.3",
+    "prettier": "^2.7.1",
     "supertest": "^6.2.4",
     "ts-jest": "^28.0.7",
     "ts-node-dev": "^2.0.0",
